gcc/testsuite/rust/rustc/ui/macros/defined-later-issue-121061-2.rs
mod demo {
    fn hello() {
        something_later!(); // { dg-error "" "" { target *-*-* } }
    }

    macro_rules! something_later {
        () => {
            println!("successfully expanded!");
        };
    }
}

fn main() {}

